[package]
name = "twofa"
version = "0.1.0"
authors = ["pauldreyer <pauels@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
encryptfile = "0.1.3"
serde = {version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"
boringauth = "0.9.0"
clipboard = "0.5.0"
